# PAPRLE

./: .gitignore  =12.2.0  ReadMe.md  mjmodel.xml  pyproject.toml  reset.py  run_data_collection.py  run_teleop.py
configs/: __init__.py
configs/env/: isaacgym.yaml  mujoco.yaml  ros.yaml  ros2.yaml
configs/follower/: default.yaml  g1.yaml  g1_upperbody.yaml  omy.yaml  papras_6dof.yaml  papras_6dof_2arm_table.yaml  papras_7dof.yaml  papras_7dof_2arm_table.yaml  papras_7dof_2arm_table_visionpro.yaml  papras_kitchen.yaml  papras_orthrus.yaml  papras_stand.yaml  papras_teleop_bag.yaml  piper_2arm_table.yaml  teleop_bag.yaml  xarm6.yaml  xarm7.yaml
configs/leader/: keyboard.yaml  sim_puppeteer_papras_6dof.yaml  sim_puppeteer_papras_7dof.yaml  sliders.yaml  umi.yaml  visionpro.yaml
docs/: Installation.md  Setup New Robot.md  TroubleShooting.md  todo.md
models/franka_panda/: panda.urdf
models/leaders/: g1_baby.urdf  hand.xml  papras_6dof_leaders_table.urdf  papras_6dof_leaders_table.xml  papras_7dof_leader.urdf  papras_7dof_leader.xml  papras_7dof_leaders_table.urdf  papras_7dof_leaders_table.xml  ur5_leader.urdf  ur5_leader.xml
paprle/: feedback.py  follower.py  teleoperator.py
paprle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: check_urdf_in_isaacgym.py  check_urdf_in_mujoco.py  get_meta_data.py  make_symlink.py  setup_new_robot.py  umi_from_codebase.py  umi_from_codebase_ik.py  umi_from_codebase_ik_get_best_offset.py  umi_from_codebase_ik_get_best_offset_mp.py  umi_from_codebase_ik_test_best_offset.py  umi_workaround.py
(+131 files in other folders)
